force-app/main/default/objects/Responsible_Person__c/Responsible_Person__c.object-meta.xml
<CustomObject>
    <label>Responsible person</label>
    <nameField>
        <displayFormat>RP-{YYYY}{MM}{0000}</displayFormat>
        <label>门店负责人编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responsible persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>