force-app/main/default/objects/Responsible_Person__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Shop_Name__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>法人</label>
    <type>Text</type>
</CustomField>