force-app/main/default/objects/Responsible_Person__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <description>离店日期</description>
    <label>Exit Date</label>
    <type>Date</type>
</CustomField>