force-app/main/default/objects/Responsible_Person__c/fields/External_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Key_ID__c</fullName>
    <formula>Shop_Name__r.External_Key_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>送达方编码</label>
    <type>Text</type>
</CustomField>