force-app/main/default/objects/Responsible_Person__c/fields/Is_Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Formula__c</fullName>
    <description>根据user表中的active状态更新</description>
    <formula>Principal__r.IsActive</formula>
    <label>User Status</label>
    <type>Checkbox</type>
</CustomField>