force-app/main/default/objects/Responsible_Person__c/fields/Pos_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Pos_Level_Name__c</fullName>
    <formula>CASE( RecordType__c , 
&apos;巡店员&apos;, &apos;Patrol clerk&apos;, 
&apos;促销员&apos;, &apos;Promoters&apos;,
&apos;Regional Manager&apos;,&apos;Regional Manager&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pos Level Name</label>
    <type>Text</type>
</CustomField>