force-app/main/default/objects/Responsible_Person__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>负责人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Responsible_Person</relationshipName>
    <type>Lookup</type>
</CustomField>