force-app/main/default/objects/Responsible_Person__c/fields/Principal_Text__c.field-meta.xml
<CustomField>
    <fullName>Principal_Text__c</fullName>
    <label>门店负责人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>