force-app/main/default/objects/Responsible_Person__c/fields/Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Name__c</fullName>
    <formula>CASE( Product_Line__c ,
&apos;TV&apos;,&apos;TV&apos;,
&apos;BG-Others&apos;,&apos;BG-Others&apos;,
&apos;Laser TV&apos;,&apos;LTV&apos;,
&apos;Commercial display&apos;,&apos;Commercial display&apos;,
&apos;MP&apos;,&apos;MP&apos;,
&apos;Sound Bar&apos;,&apos;Soundbar&apos;,
&apos;Other&apos;,&apos;Other&apos;,
&apos;Medical utltrasound&apos;,&apos;Medical utltrasound&apos;,
&apos;Smart City&apos;,&apos;Smart City&apos;,
&apos;AC&apos;,&apos;AC&apos;,
&apos;Refrigerator&apos;,&apos;REF&apos;,
&apos;Freezer&apos;,&apos;FZ&apos;,
&apos;WM&apos;,&apos;WM&apos;,
&apos;Small Domestic Home Appliances&apos;,&apos;SDA&apos;,
&apos;LCAC&apos;,&apos;CAC&apos;,
&apos;Hitachi Commercial AC&apos;,&apos;Hitachi CAC&apos;,
&apos;WineCabi&apos;,&apos;WineCabi&apos;,
&apos;Cooking&apos;,&apos;Cooking&apos;,
&apos;Dishwasher&apos;,&apos;DW&apos;,
&apos;CF&apos;,&apos;CF&apos;,
&apos;HeatPump&apos;,&apos;HeatPump&apos;,

&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Name</label>
    <type>Text</type>
</CustomField>