force-app/main/default/objects/Responsible_Person__c/fields/Promoter_Attendance_Rule__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Attendance_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>考勤规则</label>
    <referenceTo>Promoter_Attendance_Rule__c</referenceTo>
    <relationshipName>Responsible_Person</relationshipName>
    <type>Lookup</type>
</CustomField>