force-app/main/default/objects/Responsible_Person__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>负责人类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>巡店员</fullName>
            </value>
            <value>
                <fullName>促销员</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
                <label>区域经理</label>
            </value>
            <value>
                <fullName>Backup Floorwalker</fullName>
                <isActive>false</isActive>
                <label>Backup Floorwalker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>