force-app/main/default/objects/Responsible_Person__c/fields/SAPCreate__c.field-meta.xml
<CustomField>
    <fullName>SAPCreate__c</fullName>
    <label>SAP创建者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>