force-app/main/default/objects/Responsible_Person__c/fields/SAPCreateTime__c.field-meta.xml
<CustomField>
    <fullName>SAPCreateTime__c</fullName>
    <label>SAP创建时间</label>
    <length>255</length>
    <type>Text</type>
</CustomField>