force-app/main/default/objects/Responsible_Person__c/fields/SAPExternal__c.field-meta.xml
<CustomField>
    <fullName>SAPExternal__c</fullName>
    <externalId>true</externalId>
    <label>SAP送达方&amp;抛点编码</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>