force-app/main/default/objects/Responsible_Person__c/fields/SAPUserName__c.field-meta.xml
<CustomField>
    <fullName>SAPUserName__c</fullName>
    <label>负责人SAP姓名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>