force-app/main/default/objects/Responsible_Person__c/fields/Shop_Id__c.field-meta.xml
<CustomField>
    <fullName>Shop_Id__c</fullName>
    <label>门店Id(后台使用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>