force-app/main/default/objects/Responsible_Person__c/fields/Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name__c</fullName>
    <label>门店名称</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Shop_Responsible_Person</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>