force-app/main/default/objects/Responsible_Person__c/fields/Shop_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name_Text__c</fullName>
    <label>门店名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>