force-app/main/default/objects/Responsible_Person__c/fields/Store_Grid__c.field-meta.xml
<CustomField>
    <fullName>Store_Grid__c</fullName>
    <formula>Shop_Name__r.Grid__r.Name</formula>
    <label>Store Grid</label>
    <type>Text</type>
</CustomField>