force-app/main/default/objects/Responsible_Person__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>负责人邮箱</label>
    <length>255</length>
    <type>Text</type>
</CustomField>