force-app/main/default/objects/Responsible_Person__c/fields/UserEmailF__c.field-meta.xml
<CustomField>
    <fullName>UserEmailF__c</fullName>
    <formula>Principal__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserEmail</label>
    <type>Text</type>
</CustomField>