force-app/main/default/objects/Responsible_Person__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <formula>Principal__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserName</label>
    <type>Text</type>
</CustomField>