force-app/main/default/objects/Responsible_Person__c/validationRules/Promoter_Attendance_Rule_Is_Must.validationRule-meta.xml
<ValidationRule>
    <fullName>Promoter_Attendance_Rule_Is_Must</fullName>
    <active>true</active>
    <description>Promoter Attendance Rule is Must</description>
    <errorConditionFormula>IF(AND(
				OR( ISPICKVAL(Principal__r.Sales_Region__c , &apos;Hisense Chile&apos;) ,
							ISPICKVAL(Principal__r.Sales_Region__c , &apos;Hisense South Africa&apos;) ,
							ISPICKVAL(Principal__r.Sales_Region__c , &apos;Hisense Indonesia&apos;) 
						),
				 OR(ISNULL(Promoter_Attendance_Rule__c) , 
								ISBLANK(Promoter_Attendance_Rule__c)
							) ,
				 ISPICKVAL(RecordType__c , &apos;促销员&apos;)
					),True,False)</errorConditionFormula>
    <errorMessage>Promoter Attendance Rule is Must</errorMessage>
</ValidationRule>