force-app/main/default/objects/Responsible_Person__c/validationRules/User_or_User_Email_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_or_User_Email_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.GlobalSetting__c.IgnoreValidation__c ),
ISBLANK(Principal__c) &amp;&amp;  ISBLANK(UserEmail__c)
)</errorConditionFormula>
    <errorMessage>负责人或负责人邮箱必填其一</errorMessage>
</ValidationRule>