force-app/main/default/objects/Responsible_Person__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>External_Key_ID__c</columns>
    <columns>NAME</columns>
    <columns>Shop_Name_Text__c</columns>
    <columns>Principal_Text__c</columns>
    <columns>UserEmail__c</columns>
    <columns>RecordType__c</columns>
    <columns>Promoter_Attendance_Rule__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>