force-app/main/default/objects/Responsible_Person__c/listViews/Chile.listView-meta.xml
<ListView>
    <fullName>Chile</fullName>
    <columns>NAME</columns>
    <columns>Shop_Name__c</columns>
    <columns>Shop_Name_Text__c</columns>
    <columns>Principal_Text__c</columns>
    <filterScope>Mine</filterScope>
    <label>Chile</label>
</ListView>