force-app/main/default/objects/Responsible_Person__c/listViews/Need_Update_List.listView-meta.xml
<ListView>
    <fullName>Need_Update_List</fullName>
    <columns>External_Key_ID__c</columns>
    <columns>NAME</columns>
    <columns>Shop_Name_Text__c</columns>
    <columns>Principal_Text__c</columns>
    <columns>UserEmail__c</columns>
    <columns>RecordType__c</columns>
    <columns>SAPUserName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Principal_Text__c</field>
        <operation>equals</operation>
    </filters>
    <label>更新待ち店舗責任者</label>
</ListView>