force-app/main/default/objects/Responsible_Person__c/listViews/SA.listView-meta.xml
<ListView>
    <fullName>SA</fullName>
    <columns>NAME</columns>
    <columns>Shop_Name__c</columns>
    <columns>Principal_Text__c</columns>
    <columns>UserEmail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>ZAR</value>
    </filters>
    <label>SA</label>
</ListView>